versioned_docs/version-7.6.7/sdks/net/android/matrixscan-pick/advanced.md
---
sidebar_position: 3
pagination_next: null
framework: netAndroid
keywords:
  - netAndroid
---

# Advanced Configurations

MatrixScan Pick is optimized by default for efficiency, accuracy, and a seamless user experience. However, there are multiple advanced settings available to further customize MatrixScan Pick to best fit your needs.

## BarcodePick Listener

You may want more fine-grained knowledge over the different events happening during the life of the `BarcodePick` mode, such as when the search starts, pauses, and stops.

To do this, you can directly register a [`BarcodePickListener`](https://docs.scandit.com/7.6/data-capture-sdk/android/barcode-capture/api/barcode-pick-listener.html#interface-scandit.datacapture.barcode.pick.IBarcodePickListener) on the mode itself, keeping in mind that these listeners are called from a background thread.

```csharp
public class MyBarcodePickListener : IBarcodePickListener
{
    public void OnSessionUpdated(BarcodePick barcodePick, BarcodePickSession session)
    {
        // Handle session update
    }
}

private void Initialize()
{
    barcodePick.AddListener(new MyBarcodePickListener());
}
```
